<resources>
    <string name="map_id" translatable="false">9be5d94d7c7761cc</string>
    <string name="app_name">Courier Assistant</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_map">Map</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Available orders</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_maps">Maps Activity</string>
    <string name="toggle_order_details">Expand or collapse order details</string>
    <string name="finish_delivery">Finish delivery</string>
    <string name="cancel">Cancel</string>
    <string name="route">Route</string>
    <string name="show_route">Route</string>
    <string name="stats">Stats</string>
    <string name="accepted_orders">Confirmed Orders</string>
    <string name="history">History</string>
    <string name="all_routes">Routes</string>
    <string name="dashboard_route_list">List</string>
    <string name="show_routes">Personal route</string>
    <string name="sign_out">Sign Out</string>
    <string name="show_the_best_route">Optimized route</string>
    <string name="select_orders_text">Select orders</string>
</resources>