<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:background="@drawable/rounded_corner_item"
        android:padding="8dp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/orderNameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/show_it_on_map"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/show_buttons"
                android:text="@string/show_route"
                android:textColor="@color/white"
                android:layout_marginHorizontal="12dp"/>

            <ToggleButton
                android:id="@+id/expand_collapse_button"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="8dp"
                android:textOn=""
                android:textOff=""
                android:textColor="@color/white"
                android:background="@drawable/toggle_background_selector"
                android:contentDescription="@string/toggle_order_details" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:text="Limit date:"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/limit_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/additional_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_marginVertical="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical">

                <TextView
                    android:text="Client name: "
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
                <TextView
                    android:id="@+id/client_name"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/order_description"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginHorizontal="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">

                <TextView
                    android:text="Deliver to: "
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                />

                <TextView
                    android:id="@+id/delivery_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="Phone number: "
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content" />
                    <TextView
                        android:id="@+id/client_phone_number"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textAlignment="center" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/call_button"
                    android:text="Call"
                    android:layout_marginStart="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#309E31"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical">

                <TextView
                    android:text="E-mail: "
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content" />
                <TextView
                    android:id="@+id/client_email"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pay_status"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:id="@+id/pay_type"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:id="@+id/order_price"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginHorizontal="5dp"/>

                <TextView
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="lei "
                    android:textSize="16sp"
                    android:textAlignment="center"
                    android:layout_marginEnd="5dp"/>

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/delivered_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Finish_buttons"
                android:text="@string/finish_delivery"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/Cancel_buttons"
                android:text="@string/cancel"
                android:textColor="@color/white"
                style="?android:attr/buttonBarButtonStyle"
                />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
